improved-little-spacing-issue

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -6,7 +6,7 @@
     }
 
     a {
-        @apply md:px-4 py-2 block text-center border-y-4 border-transparent my-[1px];
+        @apply md:px-4 py-2 block text-center border-y-4 border-transparent my-[0.5px];
 
         &:active {
             @apply bg-black bg-opacity-5;
